# fluorite-mcp

./: .gitignore  .npmignore  AGENTS.md  API.md  BENEFITS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  METRICS.md  PUBLISH_WORKFLOW.md  README.md  SECURITY.md  STATIC_ANALYSIS_SUMMARY.md  fluorite-mcp-0.12.1.tgz  fluorite-mcp-0.29.0.tgz  fluorite-mcp-setup.md  package-lock.json  package.json  performance_analysis.md  tsconfig.json  vitest.config.ci.ts  vitest.config.ts
.github/workflows/: README.md  auto-release.yml  ci.yml  deploy-docs.yml  examples-dryrun.yml  pr-merge.yml  release.yml
.serena/: project.yml
catalog/: devops-operations-ecosystem.yaml  lua-ecosystem.yaml  phonetics-linguistic-ecosystem.yaml  ruby-rails-ecosystem.yaml  shell-tools-ecosystem.yaml  spike-development-ecosystem.yaml  static-site-generators.yaml  web-development-comprehensive-ecosystem.yaml  webrtc-streaming-ecosystem.yaml
coverage/: coverage-final.json  index.html
coverage/src/: index.html  server.ts.html  types.ts.html  utils.ts.html
docs/: API.md  ARCHITECTURE_SUMMARY.ja.md  ARCHITECTURE_SUMMARY.md  BULK-GENERATION.md  JAPANESE_LOCALIZATION_PLAN.md  README.md  SPEECH_PROCESSING.md  STATIC_ANALYSIS.ja.md  STATIC_ANALYSIS.md  WAVE_1_COMPLETION_SUMMARY.md  _navbar.md  commands.ja.md  commands.md  developer.md  diff-samples.md  faq.md  features.md  file-structure-samples.md  fl-commands-detailed.md  fl-commands.ja.md  fl-commands.md  flow-tree-cookbook.md  flow-tree-quickstart.md  flow-tree-starter.md  function-reference.ja.md  function-reference.md  getting-started.md  index.md  installation.ja.md  installation.md  integration-guide.md  introduction.ja.md  introduction.md  monitoring-alerts.md  one-pagers.md  performance.ja.md  performance.md  post-apply-checklists.md  queue-snippets.md  recipes.md  (+17 more)
docs/.vitepress/: config.mts  config.ts
docs/architecture/: README.md  claude-cli-integration.md  command-mapping-spec.md  deployment-plan.md  fluorite-wrapper-design.md  implementation-roadmap.md  spike-template-expansion-plan.md  testing-strategy.md
docs/features/: README.md  spike-templates.md
docs/ja/: API.md  SPEECH_PROCESSING.md  commands.md  developer.md  faq.md  features.md  fl-commands-detailed.md  fl-commands.md  function-reference.md  getting-started.md  index.md  installation.md  integration-guide.md  introduction.md  metrics-alertmanager.md  metrics-scrape.md  pack-checklists.md  pack-samples.md  payments-db-design.md  performance.md  pr-checklist.md  short-aliases.md  spike-templates-detailed.md  spike-templates.md  static-analysis.md  storage-cdn-inline.md  storage-cdn-recipes.md  storage-cdn-ui.md  storage-filename-policy.md  strike-packs.md  strike-recipes.md  strike-scale.md  strike-templates.md  template-creation.md  troubleshooting.md  tutorials.md  ui-command.md  use-cases-examples.md
docs/specs/: additional-modern-technologies.md  ai-ml-llm-comprehensive.md  cloud-platforms.md  devops.md  expo-react-native.md  fastapi-starter.md  frontend-visualization.md  index.md  langs.md  lua.md  mobile-native.md  modern-backend-serverless.md  modern-tech.md  next-starter.md  react-dnd-treeview.md  shell-tools.md  spike-development.md  ui-component-quality.md  vercel-ai-sdk.md  vue.md  web-development-comprehensive.md  webrtc-streaming.md
examples/: README.md  github-actions-integration.yml  monorepo-config.yml  quick-start-team.sh  vscode-integration.json
examples/pack-examples/: README.md
memory-engine/: Cargo.toml  README.md
memory-engine/fluorite-bridge/: Cargo.toml
memory-engine/fluorite-bridge/src/: bridge_types.rs  error_handling.rs  lib.rs  protocol_adapter.rs
memory-engine/fluorite-learner/: Cargo.toml
memory-engine/fluorite-learner/src/: learning_algorithms.rs  lib.rs  pattern_extractor.rs  spike_parser.rs  template_analyzer.rs
memory-engine/fluorite-memory/: Cargo.toml
memory-engine/fluorite-memory/src/: cache.rs  chunk.rs  lib.rs  patterns.rs  search.rs  storage.rs
memory-engine/fluorite-ml/: Cargo.toml
memory-engine/fluorite-ml/src/: clustering.rs  embeddings.rs  lib.rs  models.rs  python_bridge.rs  similarity.rs  training.rs
scripts/: README.md  generate-spikes.ts  git-merge-orchestrator.sh  materialize-spikes.ts  pre-publish-checks.sh  publish-workflow.sh  setup-mcp-connection.sh  validate-mcp-connection.sh  version-utils.sh
src/: mcp-server.ts  server.ts  types.ts  utils.ts
src/catalog/: @auth__nextjs.yaml  @clerk__nextjs.yaml  @minoru__react-dnd-treeview.yaml  @mui__x-data-grid.yaml  @radix-ui__themes.yaml  @sentry__nextjs.yaml  @tanstack__react-query.yaml  @tanstack__react-table.yaml  @tremor__react.yaml  @upstash__redis.yaml  additional-modern-technologies-ecosystem.yaml  ag-grid.yaml  ai-ml-llm-comprehensive-ecosystem.yaml  animate-ui.yaml  authjs.yaml  azure-ecosystem.yaml  clerk.yaml  cloud-native-infrastructure-ecosystem.yaml  cloud-platforms.yaml  csharp-ecosystem.yaml  dart-ecosystem.yaml  data-processing-analytics-ecosystem.yaml  development-efficiency-dx-ecosystem.yaml  devops-operations-ecosystem.yaml  drizzle-orm.yaml  elixir-ecosystem.yaml  expo-react-native-comprehensive-ecosystem.yaml  expo-react-native-ecosystem.yaml  fastapi-ecosystem.yaml  fastapi-starter.yaml  filter-match-1.yaml  firebase-ecosystem.yaml  flutter-ecosystem.yaml  frontend-ui-innovation-ecosystem.yaml  frontend-visualization-ecosystem.yaml  gcp-ecosystem.yaml  go-ecosystem.yaml  hono.yaml  jotai.yaml  laravel-ecosystem.yaml  (+50 more)
src/cli/: index.ts
src/core/: auto-spike.meta.test.ts  catalog.test.ts  catalog.ts  claude-md-generator.ts  dependency-analyzer.ts  error-predictor.ts  generated-spike-handlers.ts  handlers.test.ts  handlers.ts  logger.test.ts  logger.ts  nextjs-analyzer.ts  react-analyzer.ts  spike-catalog.count.test.ts  spike-catalog.strike-sanity.test.ts  spike-catalog.test.ts  spike-catalog.ts  spike-catalog.unique.test.ts  (+48 more)
src/test/: e2e.test.ts  (+8 more)
(+22859 files in other folders)
