[workspace]
members = [
    "fluorite-memory",
    "fluorite-learner", 
    "fluorite-ml",
    "fluorite-bridge"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage and indexing
sled = "0.34"
tantivy = "0.22"
bincode = "1.3"
lz4_flex = "0.11"

# ML and embeddings  
ort = { version = "2.0", default-features = false, features = ["load-dynamic"] }
candle-core = "0.6"
candle-nn = "0.6"
candle-transformers = "0.6"
ndarray = "0.15"

# HTTP and communication
reqwest = { version = "0.12", features = ["json"] }
jsonrpc-core = "18.0"
jsonrpc-stdio-server = "18.0"

# Utilities
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.0"
parking_lot = "0.12"
rayon = "1.10"
num_cpus = "1.16"
walkdir = "2.4"
regex = "1.10"
lru = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true